--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="utf-8">
+	<title>ZA Learning Three JS demo</title>
+	<style>
+		body { margin: 0; padding: 0; }
+		canvas { display:block; }
+	</style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<script src="https://threejs.org/build/three.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
