--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>ZA Learning Three JS demo</title>
+	<title>ROAARRRR!</title>
 	<style>
 		body { margin: 0; padding: 0; }
 		canvas { display:block; }
