--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</style>
 </head>
 <body>
-<script src="https://threejs.org/build/three.js"></script>
+<script src="https://threejs.org/build/three.min.js"></script>
 <script src="js/index.js"></script>
 </body>
 </html>
