--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
         <script type="text/javascript" src="https://threejs.org/build/three.js"></script>
         <script type="text/javascript" src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
-        <script type="text/javascript" src="../../../resources/rhino3dm.js"></script>
-        <script type="text/javascript" src="../../../resources/compute.rhino3d.js"></script>
+        <script type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/rhino3dm.js"></script>
+        <script type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/compute.rhino3d.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
