--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <div id="canvas"></div>
         </div>
 
-        <script type="text/javascript" src="https://threejs.org/build/three.js"></script>
-        <script type="text/javascript" src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
-        <script type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/rhino3dm.js"></script>
-        <script type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/compute.rhino3d.js"></script>
-        <script type="text/javascript" src="app.js"></script>
+        <script async type="text/javascript" src="https://threejs.org/build/three.js"></script>
+        <script async type="text/javascript" src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
+        <script async type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/rhino3dm.js"></script>
+        <script async type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/compute.rhino3d.js"></script>
+        <script async type="text/javascript" src="app.js"></script>
     </body>
 </html>
