--- a/index.html
+++ b/index.html
@@ -1,59 +1,90 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>The Honeycomb Theory</title>
+        <title>Hello Mesh!</title>
         <style>
             body { margin: 0; }
             canvas { width: 100%; height: 100%; }
-            input {width: 90%;}
             #container {position: relative;}
-            #container canvas, #overlay { position: absolute;}
+            #container canvas { position: absolute;}
             #overlay {z-index: 1; width: 100%}
-
-            #loader {
-                border: 5px solid #f3f3f3; /* Light grey */
-                border-top: 5px solid #3d3d3d; /* Grey */
-                border-radius: 50%;
-                width: 40px;
-                height: 40px;
-                animation: spin 1s linear infinite;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                z-index: 2;
-            }
-
-            @keyframes spin {
-                0% { transform: rotate(0deg); }
-                100% { transform: rotate(360deg); }
-            }
         </style>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     </head>
     <body>
-        <div id="loader"></div> 
         <div id="container">
-            <div id="overlay">
-                <div>
-                    <input type="range" id="count" name="count" min="1" max="100" value="35" step="1" onmouseup="onSliderChange()" ontouchend="onSliderChange()">
-                    <label for="count">Count</label>
-                </div>
-                <div>
-                    <input type="range" id="radius" name="radius" min="0" max="10.00" value="5.00" step="0.1" onmouseup="onSliderChange()" ontouchend="onSliderChange()">
-                    <label for="radius">Radius</label>
-                </div>
-                <div>
-                    <input type="range" id="length" name="length" min="0" max="10.00" value="1.00" step="0.1" onmouseup="onSliderChange()" ontouchend="onSliderChange()">
-                    <label for="length">Length</label>
-                </div>
-            </div>
-
+            <a class="github-fork-ribbon left-top" href="https://github.com/mcneel/rhino3dm/blob/master/docs/javascript/samples/hello_mesh.html" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
             <div id="canvas"></div>
         </div>
-
         <script async type="text/javascript" src="https://threejs.org/build/three.js"></script>
         <script async type="text/javascript" src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
         <script async type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/rhino3dm.js"></script>
-        <script async type="text/javascript" src="https://files.mcneel.com/rhino3dm/js/latest/compute.rhino3d.js"></script>
-        <script async type="text/javascript" src="app.js"></script>
+        <script async type="text/javascript">
+            let fetchPromise = fetch('hello_mesh.3dm');
+
+            rhino3dm().then(async m => {
+                console.log('Loaded rhino3dm.');
+                let rhino = m;
+
+                let res = await fetchPromise;
+                let buffer = await res.arrayBuffer();
+                let arr = new Uint8Array(buffer);
+                let doc = rhino.File3dm.fromByteArray(arr);
+
+                THREE.Object3D.DefaultUp = new THREE.Vector3(0,0,1)
+                init();
+                let material = new THREE.MeshNormalMaterial();
+
+                let objects = doc.objects();
+                for (let i = 0; i < objects.count; i++) {
+                    let mesh = objects.get(i).geometry();
+                    if(mesh instanceof rhino.Mesh) {
+                        // convert all meshes in 3dm model into threejs objects
+                        let threeMesh = meshToThreejs(mesh, material);
+                        scene.add(threeMesh);
+                    }
+                }
+            });
+
+            // BOILERPLATE //
+            var scene, camera, renderer, controls;
+
+            function init(){
+                scene = new THREE.Scene();
+                scene.background = new THREE.Color(1,1,1);
+                camera = new THREE.PerspectiveCamera( 45, window.innerWidth/window.innerHeight, 1, 1000 );
+                camera.position.set(26,-40,5)
+
+                renderer = new THREE.WebGLRenderer({antialias: true});
+                renderer.setPixelRatio( window.devicePixelRatio );
+                renderer.setSize( window.innerWidth, window.innerHeight );
+                var canvas = document.getElementById("canvas");
+                canvas.appendChild( renderer.domElement );
+
+                controls = new THREE.OrbitControls( camera, renderer.domElement  );
+
+                window.addEventListener( 'resize', onWindowResize, false );
+                animate();
+            }
+
+            var animate = function () {
+                requestAnimationFrame( animate );
+                controls.update();
+                renderer.render( scene, camera );
+            };
+
+            function onWindowResize() {
+                camera.aspect = window.innerWidth / window.innerHeight;
+                camera.updateProjectionMatrix();
+                renderer.setSize( window.innerWidth, window.innerHeight );
+                animate();
+            }
+
+            function meshToThreejs(mesh, material) {
+                let loader = new THREE.BufferGeometryLoader();
+                var geometry = loader.parse(mesh.toThreejsJSON());
+                return new THREE.Mesh(geometry, material);
+            }
+        </script>
     </body>
 </html>
