--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         </style>
     </head>
     <body>
+          <div id="container">
+            <a class="github-fork-ribbon left-top" href="https://github.com/mcneel/rhino3dm/blob/master/docs/javascript/samples/hello_mesh.html" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
+            <div id="canvas"></div>
+        </div>
+        
         <script async type="text/javascript" src="three.min.js"></script>
         <script async type="text/javascript" src="OrbitControls.js"></script>
         <script async type="text/javascript" src="rhino3dm.js"></script>
