--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="rhino3dm.js"></script>
         <script type="text/javascript">
           
-            let url = 'hello_mesh.3dm';
+            let url = 'myMesh.3dm';
             let fetchPromise = fetch(url);
 
             rhino3dm().then(async m => {
