--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>The Honeycomb Theory</title>
+        <title>LXXXIX</title>
         <style>
             body { margin: 0; }
             canvas { width: 100%; height: 100%; }
