--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div id="canvas"></div>
         </div>
         
-        <script type="text/javascript" src="three.min.js"></script>
-        <script type="text/javascript" src="OrbitControls.js"></script>
-        <script type="text/javascript" src="rhino3dm.js"></script>
+        <script type="text/javascript" src="libs/three.min.js"></script>
+        <script type="text/javascript" src="libs/OrbitControls.js"></script>
+        <script type="text/javascript" src="libs/rhino3dm.js"></script>
         <script type="text/javascript">
           
-            let url = 'myMesh.3dm';
+            let url = 'model/myMesh.3dm';
             let fetchPromise = fetch(url);
 
             rhino3dm().then(async m => {
