--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
         <script type="text/javascript" src="libs/OrbitControls.js"></script>
         <script type="text/javascript" src="libs/rhino3dm.js"></script>
         <script type="text/javascript" src="libs/compute.rhino3d.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="src/app.js"></script>
     </body>
 </html>
