--- a/slider_index.html
+++ b/slider_index.html
@@ -5,7 +5,7 @@
         <title>LXXXIX</title>
         <style>
             body { margin: 0; }
-            canvas { width: 100%; height: 100%; }
+            canvas { width: 100%; height: 100%; display: block}
             input {width: 90%;}
             #container {position: relative;}
             #container canvas, #overlay { position: absolute;}
